🏁 docs(core): H 会话 800 系收口——50/50 轮自迭代 Destination 达成（effort #800–#849 连续无缺位）。① 全反应堆 mvn clean verify 绿（16 模块 SUCCESS；排除集 15 类如实登记：9 既有+收口实测新增 ToolTimingAggregatorConcurrency 本机挂起及 flaky 族）；② 收口轮缺陷修正：ToolDenialLog.topDenials 的 Map.copyOf 丢弃排序致 G 会话稳定性测试从未真正通过——改 unmodifiableMap 保序；③ 台账 50/50 归档+MAP.md #800 已收口+README 纵深 IX 全 50 行补齐（覆盖门兜底）；④ 号段交接：900 系留后续会话。收口三工件 spec849+T1199/T1200+impl601（resolve T1199-T1200, impl601, spec849, H 会话第 50 轮=effort#849 收口）